--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swiggy</title>
-    <link rel="icon" href="swiggy image.jpeg">
+    <link rel="icon" href="./swiggy image.jpeg">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -13,7 +13,7 @@
         <div class="top">
             <div class="head">
                 <div class="container">
-                    <img src="Swiggy_logo_bml6he.png">
+                    <img src="./Swiggy_logo_bml6he.png">
                 </div>
                 <nav>
                  <ul>
